# xiangxue

./: .gitignore  Cargo.toml  component-design.md  converter-design.md  enhancement-plan.md
frontend/: package-lock.json  package.json
frontend/src/: index.ts
frontend/src/preview/: DeviceFrame.vue  PreviewShell.vue  previewConfig.ts
src/: cli.rs  display.rs  font.rs  layout.rs  lib.rs  parser.rs  style.rs  types.rs
tests/: integration.rs
